[package]
name = "rust-breakout"
version = "0.1.0"
edition = "2021"
description = "A neon-styled Breakout game in Rust, compiled to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "Element",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "Performance",
    "EventTarget",
    "HtmlElement",
    "DomRect",
]

[profile.release]
opt-level = "s"
lto = true
